--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="normalize.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevPrajul Portfolio Website</title>
+    <title>Prajul's Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
@@ -29,12 +29,12 @@
                 <li class="nav__items"><a href="#" class="nav__link">Home</a></li>
                 <li class="nav__items"><a href="#" class="nav__link">My Services</a></li>
                 <li class="nav__items"><a href="#" class="nav__link">About me</a></li>
-                <li class="nav__items"><a href="#" class="nav__link">My Wor</a></li>
+                <li class="nav__items"><a href="#" class="nav__link">My Work</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="intro" id=house></section>
+    <section class="intro" id="house"></section>
     <h1 class="section__title section__title--intro">
         Hi,I am <strong>Prajul Jaggi</strong>
     </h1>
@@ -49,14 +49,14 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>Design + Development</h3>
+                <h3>Design</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
             </div> <!-- / service -->
 
             <div class="service">
-                <h3>E-Commerce</h3>
+                <h3>SQL</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
@@ -77,7 +77,7 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Designer & developer based out of NYC</p>
+        <p class="section__subtitle section__subtitle--about">Designer & developer from Chandigarh</p>
 
         <div class="about-me__body">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -115,12 +115,6 @@
             <!-- Portfolio item 04 -->
             <a href="#" class="portfolio__item">
                 <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
-            </a>
-
-            <!-- Portfolio item 05 -->
-            <a href="#" class="portfolio__item">
-                <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
-            </a>
             </a>
         </div>
     </section>
