--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Prajul Jaggi</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+            <p class="section__subtitle section__subtitle--intro">Full Stack developer</p>
             <img src="img/header.png" alt="a picture of Prajul" class="intro__img">
         </section>
         
