typos and fonts fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
 
-        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+        <link href="'https://fonts.googleapis.com/css?family=Poppins:400,700,800'" rel="stylesheet">
         
         <link rel="stylesheet" href="css/style.css">
 
@@ -124,7 +124,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="mailto:pjaggi53@gmail.com" class="footer__link">hello@prajul.dev</a>
+        <a href="mailto:pjaggi53@gmail.com" class="footer__link">pjaggi53@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item"><a class="social-list__link" href="https://facebook.com/praj_l"><i
                         class="fab fa-facebook"></i></a></li>
